// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList runTask will run a task by taskName 1`] = `
Object {
  "info": Object {
    "category": "bar",
    "group": undefined,
    "taskDisplayName": "Insights Task High",
    "taskName": "insights-task-high",
  },
  "result": Array [],
}
`;

exports[`TaskList runTasks will run all registered tasks 1`] = `
Object {
  "info": Object {
    "category": "bar",
    "group": undefined,
    "taskDisplayName": "Insights Task High",
    "taskName": "insights-task-high",
  },
  "result": Array [],
}
`;

exports[`TaskList runTasks will run all registered tasks 2`] = `
Object {
  "info": Object {
    "category": "foo",
    "group": undefined,
    "taskDisplayName": "Insights Task Low",
    "taskName": "insights-task-low",
  },
  "result": Array [],
}
`;
